jsonschemadsl2ecore.trafo.opt/test/test97/invalidtests/example3.test97
{
	"prop1":["foo",1,null,"too many items"],
	"prop2":["foo"],
	"prop3":["bar"]
} 